fix: Implement lm(Linked Mention) TextBlock

--- a/packages/react-notion-x/src/styles.css
+++ b/packages/react-notion-x/src/styles.css
@@ -750,6 +750,43 @@ svg.notion-page-icon {
   border-color: var(--fg-color-0);
 }
 
+.notion-linked-mention {
+  display: flex; 
+  gap: 6px;
+  align-items: center;
+
+  color: inherit;
+  word-break: break-word;
+  text-decoration: inherit;
+  opacity: 0.7;
+  transition:
+    border-color 100ms ease-in,
+    opacity 100ms ease-in;
+}
+
+.notion-linked-mention:hover {
+  border-color: var(--fg-color-6);
+  opacity: 1;
+}
+
+/* title이 길면 ... 처리 필요 */
+.notion-linked-mention-title {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  line-clamp: 1;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+}
+
+.notion-linked-mention-preview {
+  display: block;
+  object-fit: cover;
+  border-radius: 4px;
+  width: 20px;
+  height: 20px;
+}
+
+
 .notion-link {
   color: inherit;
   word-break: break-word;
